<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="110dp"
                android:id="@+id/guideline2"/>
        <TextView
                android:text="@string/label_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintBaseline_toBaselineOf="@+id/content_two_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/label_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintBaseline_toBaselineOf="@+id/content_three_text"
                app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="220dp"
                android:id="@+id/guideline3"/>
        <Button
                android:text="@string/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/update_button"
                app:layout_constraintStart_toEndOf="@+id/add_button" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline3"/>
        <Button
                android:text="@string/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                app:layout_constraintStart_toEndOf="@+id/update_button" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline3"/>
        <Button
                android:text="@string/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/update_button"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline3"/>
        <Button
                android:text="@string/search_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/search_button"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/search_content"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/search_content"
                android:hint="@string/search_hint"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
                app:layout_constraintStart_toEndOf="@+id/search_button" app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/label_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintBaseline_toBaselineOf="@+id/content_one_text"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/content_one_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
                android:hint="@string/content_one" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/search_content"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/content_two_text"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/content_one_text" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
                android:hint="@string/content_two"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/content_three_text" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/content_two_text"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline3"
                android:hint="@string/content_three"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>