<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
>

        <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:id="@+id/display_one_text"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="110dp"
                android:id="@+id/guideline2"/>
        <TextView
                android:text="@string/label_two"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/display_two_text"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
        <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:id="@+id/display_two_text"
                app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/display_one_text"
                app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/label_three"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/display_text_three" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:id="@+id/display_text_three"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/display_two_text"
                app:layout_constraintStart_toEndOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/label_one"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/display_one_text" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>